tests/reference/asr-coarray_01-5f111e4.stderr
semantic error: Coarrays are not supported yet
 --> tests/errors/coarray_01.f90:3:11
  |
3 |     val = this_image ()
  |           ^^^^^^^^^^^^^ 
